# verilator-axi-testbench

./: .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: AxiTestbench.cmake  Fuxi.cmake  RiscvTests.cmake  axi_tb_env.h.in  config.hpp.in  link.ld.in
examples/fuxi/: CMakeLists.txt  README.md  fuxi_axi_adapter.sv
examples/fuxi/software/: access_store.S  sfence_writeback_fault.S  xret_irq.S
examples/riscv-common/: README.md
examples/riscv-common/cmake/: RiscvTests.cmake
examples/riscv-common/software/include/: riscv_test.h
examples/riscv-common/software/runtime/: start.S  toolchain_probe.S
examples/riscv-common/software/smoke/: fail.S  timeout.S
include/axi_tb/: device.hpp  devices.hpp  elf_loader.hpp  fabric.hpp  verilated_binding.hpp
rtl/: axi_tb_canonical_top.sv  axi_tb_ports.svh
software/: link.ld.in  run_expect.cmake
software/include/: axi_tb_platform.h  riscv_test.h
software/smoke/: access_dcache_writeback.S  access_fetch.S  access_load.S  mmio_store_irq.S  pass.S  sfence_uncached.S  uart.S
src/: axi.hpp  device.hpp  devices.cpp  devices.hpp  elf_loader.cpp  elf_loader.hpp  fabric.hpp  packed.hpp  sim_main.cpp  verilated_binding.hpp
tests/: CMakeLists.txt  host_axi.cpp  host_devices.cpp  host_elf.cpp  host_fabric.cpp  host_fabric_stress.cpp
tests/cmake/: check_trace.cmake  expect_configure_failure.cmake
tests/cmake/invalid_map/: CMakeLists.txt
tests/cmake/overflow_map/: CMakeLists.txt
tests/rtl/: axi_tb_protocol_fixture.sv
